<resources>
    <string name="app_name">Planner</string>
    <string name="title">Planner</string>
    <string name="use_planner_button_label">Start</string>
    <string name="database_button_label">Database</string>
    <string name="items_button_label">Items</string>
    <string name="types_button_label">Types</string>
    <string name="item_assoc_button_label">Item Assoc.</string>
    <string name="locations_button_label">Locations</string>
    <string name="plans_button_label">Plans</string>
    <string name="event_assoc_button_label">Event Assoc.</string>
    <string name="events_button_label">Events</string>
    <string name="title_activity_items_list">ScrollingActivity</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="database_error_message">Database error</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="items_title">Items</string>
    <string name="add_symbol">+</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="confirm">Confirm</string>
    <string name="delete_button_label">X</string>
    <string name="edit_button_label">Edit</string>
    <string name="types_title">Types</string>
    <string name="color">Color: </string>
    <string name="color_error_message">Invalid color format</string>
    <string name="search">Search</string>
    <string name="item_assoc_title">Item Assoc.</string>
    <string name="item_id_label">"Item:"</string>
    <string name="type_id_label">"Type:"</string>
    <string name="coordinate_x_label">"X: "</string>
    <string name="coordinate_y_label">"Y: "</string>
    <string name="locations_title">Locations</string>
    <string name="select_button_label">Select</string>
    <string name="browse_button_label">Browse</string>
    <string name="events_title">Events</string>
    <string name="datetime_min_label">From:</string>
    <string name="datetime_max_label">"To: "</string>
    <string name="use_date_checkbox_label">Use full date</string>
    <string name="pick_time_label">Pick</string>
    <string name="pick_date_label">Pick</string>
    <string name="date_hint">Date</string>
    <string name="time_hint">Time</string>
    <string name="number_format_error_message">Number format error</string>
    <string name="datetime_format_error_message">Datetime format error</string>
    <string name="date_not_set_error_message">Date not set</string>
    <string name="time_not_set_error_message">Time not set</string>
    <string name="plans_title">Plans</string>
    <string name="plan_id_label">"Plan: "</string>
    <string name="event_id_label">"Event: "</string>
    <string name="event_assoc_title">Event Assoc.</string>
    <string name="finder_title">Find</string>
    <string name="your_location_label">Your location: </string>
    <string name="find_button_label">Find</string>
    <string name="no_locations_found_message">No locations found</string>
    <string name="location_found_message">Closest location: \"%1$s\" \n at (%2$f; %3$f)</string>
    <string name="nodes_title">Nodes</string>
    <string name="nodes_button_label">Nodes</string>
    <string name="link_types_button_label">Link Types</string>
    <string name="links_button_label">Links</string>
    <string name="node_id_label">"Node: "</string>
    <string name="location_finder_button_label">Closest</string>
    <string name="map_button_label">Map</string>
    <string name="pick_duration_label">Pick</string>
    <string name="minutes_short">m</string>
    <string name="duration_label">Duration (minutes):</string>
    <string name="minutes_long">minutes</string>
    <string name="speed_label">Speed: </string>
    <string name="to_node_label">To: </string>
    <string name="from_node_label">From: </string>
    <string name="width">Width: </string>
    <string name="speed">Speed: </string>
    <string name="is_enabled_checkbox_label">Enabled</string>
    <string name="link_types_title">Link Types</string>
    <string name="modifier_label">"Modifier: "</string>
    <string name="link_type_id_label">"Type: "</string>
    <string name="links_title">Links</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>
    <string name="move_down">Move down</string>
    <string name="move_up">Move Up</string>
    <string name="move_right">Move Right</string>
    <string name="move_left">Move Left</string>
    <string name="map_title">Map</string>
    <string name="heuristic_label">Greediness:</string>
    <string name="set_current_label">Set current</string>
    <string name="to_selected_button_label">To selected</string>
    <string name="no_current_position_message">No current position selected</string>
    <string name="max_distance_label">Max Distance:</string>
    <string name="no_selected_node_message">No selected node</string>
    <string name="display_markers_checkbox_label">Display Markers</string>
    <string name="pathfinding_header">Pathfinding</string>
    <string name="heuristic_label_2">Greediness</string>
    <string name="max_distance_label_2">Max Distance</string>
    <string name="map_header">Map</string>
    <string name="map_background_color_label_2">Background color</string>
    <string name="map_node_color_label_2">Node color</string>
    <string name="map_node_radius_label_2">Node radius</string>
    <string name="map_node_selected_color_label_2">Node selection color</string>
    <string name="map_node_selected_radius_label_2">Node selection extra radius</string>
    <string name="map_node_current_color_label_2">Current location marker color</string>
    <string name="map_path_color_label_2">Path color</string>
    <string name="notes_button_label">Notes</string>
    <string name="constraints_button_label">Constraints</string>
    <string name="calendar_button_label">Calendar</string>
    <string name="plan_not_selected">Plan not selected</string>
    <string name="select_plan_tooltip">Select plan</string>
    <string name="edit_plan_list_tooltip">Edit plan list</string>
    <string name="delete">Delete</string>
    <string name="edit_mode">Edit mode</string>
</resources>