<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_add"
        android:title="@string/add"
        android:icon="@drawable/ic_baseline_add_24"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_edit"
        android:title="@string/edit"
        android:icon="@drawable/ic_baseline_mode_edit_24"
        app:showAsAction="always"/>

    <item android:id="@+id/action_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_baseline_delete_24"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_mode"
        android:title="@string/edit_mode"
        android:icon="@drawable/ic_baseline_build_24"
        app:showAsAction="always"/>


</menu>