<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.database.DatabaseMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="40dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/database_button_label"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <Button
                    android:id="@+id/items_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="itemsButtonClicked"
                    android:text="@string/items_button_label"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/types_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:onClick="typesButtonClicked"
                    android:text="@string/types_button_label"
                    android:textSize="30sp" />


                <Button
                    android:id="@+id/item_assoc_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:onClick="itemAssocButtonClicked"
                    android:text="@string/item_assoc_button_label"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/nodes_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:onClick="nodesButtonClicked"
                    android:text="@string/nodes_button_label"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/locations_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:onClick="locationsButtonClicked"
                    android:text="@string/locations_button_label"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/events_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:onClick="eventsButtonClicked"
                    android:text="@string/events_button_label"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/plans_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:onClick="plansButtonClicked"
                    android:text="@string/plans_button_label"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/event_assoc_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:onClick="eventAssocButtonClicked"
                    android:text="@string/event_assoc_button_label"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/link_types_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:onClick="linkTypesButtonClicked"
                    android:text="@string/link_types_button_label"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/links_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:onClick="linksButtonClicked"
                    android:text="@string/links_button_label"
                    android:textSize="30sp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>