<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PlanMenuActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle">
            <EditText
                android:id="@+id/plan_name_view"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:scrollHorizontally="true"
                android:maxLines="1"
                android:singleLine="true"
                android:enabled="false"

                android:hint="@string/plan_not_selected"
                android:importantForAutofill="no"
                android:inputType="none" />
            <ImageButton
                android:id="@+id/select_button"
                android:contentDescription="@string/select_plan_tooltip"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_view_list_24"
                style="?android:attr/buttonBarButtonStyle" />
            <ImageButton
                android:id="@+id/edit_button"
                android:contentDescription="@string/edit_plan_list_tooltip"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_mode_edit_24"
                style="?android:attr/buttonBarButtonStyle"
                />
        </LinearLayout>

        <GridLayout
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:columnCount="2"
            android:rowCount="2">

            <Button
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/notes_button_label"
                android:textSize="20sp"
                />
            <Button
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/events_button_label"
                android:textSize="20sp"
                android:onClick="eventsButtonClicked"
                />
            <Button
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/constraints_button_label"
                android:textSize="20sp"
                />
            <Button
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/calendar_button_label"
                android:textSize="20sp"
                />


        </GridLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>