<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/pathfinding_header">
        <EditTextPreference
            android:key="heuristic"
            app:defaultValue="0"
            app:title="@string/heuristic_label"
            android:inputType="numberDecimal"
            />

        <EditTextPreference
            android:key="max_distance"
            app:defaultValue="1000"
            app:title="@string/max_distance_label"
            android:inputType="numberDecimal"
            />

    </PreferenceCategory>



</PreferenceScreen>
